--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estrela do Amanhã</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    
+    <h1>calaboca</h1>
+    <h1 class="dois">calaboca</h1>
+    <h1 class="tres">calaboca</h1>
+    <h1 class="quatro">calaboca</h1>
 </body>
 </html>
