--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <h1>calaboca</h1>
-    <h1 class="dois">calaboca</h1>
-    <h1 class="tres">calaboca</h1>
-    <h1 class="quatro">calaboca</h1>
+    <div id="app">
+        <main>
+            <div class="main">main</div>
+        </main>
+        <aside>
+            <div class="aside">aside</div>
+        </aside>
+    </div>
 </body>
 </html>
