--- a/index.html
+++ b/index.html
@@ -12,10 +12,26 @@
 <body>
     <div id="app">
         <main>
-            <div class="main">main</div>
+            <div class="main-container">
+                <div class="back">
+                 <img src="./icons/arrow-left-02.svg" alt="seta pra a esquerda">
+                 <span>Voltar</span>
+                </div>
+                <h1>Formulário de matrícula</h1>
+                <p>Preencha os dados abaixo para matricular 
+                    seu filho na escola de educação infantil 
+                    Estrelas do Amanhã.</p>
+            </div>
         </main>
         <aside>
-            <div class="aside">aside</div>
+            <div class="aside-container"></div>
+            <header>
+              <img src="./icons/Frame 48095956.svg" alt="logo">
+              <h2>Porque cada momento de <strong>aprendizado</strong> conta</h2>
+              <p>Inscreva seu filho em nossa escola e veja-o florescer 
+                em um ambiente acolhedor, seguro e estimulante.</p>
+            </header>
+            <img src="./icons/Illustration.svg" alt="">
         </aside>
     </div>
 </body>
