--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+
     <div id="app">
+
+
         <main>
             <div class="main-container">
                 <div class="back">
@@ -21,8 +24,92 @@
                 <p>Preencha os dados abaixo para matricular 
                     seu filho na escola de educação infantil 
                     Estrelas do Amanhã.</p>
+
+                <form>
+                    <fieldset>
+                        <legend>Informações da criança</legend>
+
+                        <div id="input-all">
+                            <label for="fullname">Nome Completo</label>
+                            <br>
+                            <input type="text" id="fullname">
+                            <br>
+                            <label for="birth">Data de nascimanto</label>
+                            <br>
+                            <input type="date" name="nscimento" id="birth">
+                        </div>
+                        <div id="select-all">
+                            <label for="gender">Sexo</label>
+                            <br>
+                            <select name="gender" id="gender">
+                             <option value="Female">feminino</option>
+                             <option value="male">Masculino</option>
+                             <option value="na">Prefiro não dizer</option>
+                            </select>
+                        <div id="text-all">
+                            <label for="info-personal">Informações pessoais</label>
+                            <br>
+                            <textarea name="personal information" id="info-personal">
+                            </textarea>
+                        </div>   
+                        <div id="certificade">
+                            <label for="certificade">Certidão de nascimento</label>
+                            <br>
+                            <input type="file" name="birth certificade" id="certificade">
+                        </div> 
+                        </div>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Endereço residencial</legend>
+
+                        <div id="address-all">
+                            <label for="cep">CEP</label>
+                            <br>
+                            <input type="number" name="cep" id="cep">
+                            <br>
+                            <label for="street">Rua</label>
+                            <input type="text" name="street" id="street">
+
+                            <label for="number">Number</label>
+                            <input type="number" name="number" id="number">
+                            <br>
+                            <label for="city">Cidade</label>
+                            <input type="text" name="city" id="city">
+
+                            <label for="state">Estado</label>
+                            <input type="text" name="state" id="">
+                        </div>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Informações do responsável</legend>
+
+                        <div id="info-responsive">
+                            <label for="responsible">Nome do responsável</label>
+                            <br>
+                            <input type="text" name="name of resposible" id="responsible">
+                            <br>
+                            <label for="telephone">Telefone</label>
+                            <br>
+                            <input type="number" name="telephone" id="telephone">
+                            <br>
+                            <label for="mail">Email</label>
+                            <br>
+                            <input type="email" name="email" id="mail">
+                        </div>
+                    </fieldset>
+                    
+                    <!-- FAZER A PARTE DE SELECIONAR OPCOES -->
+                    <fieldset>
+                        <legend>Opções de matrícula</legend>
+
+                        <label for="turno">Selecione o turno de estudo</label>
+                        <input type="radio" name="" id="turno">
+                    </fieldset>
+                </form>    
             </div>
         </main>
+
+
         <aside>
             <div class="aside-container"></div>
             <header>
