finalização da estrutura do input:radio

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <label for="turno">Selecione o turno de estudo</label>
 
                         <div class="radio-all">
-                            <div class="radio-inside">
+                            <div class="radio-inside-1">
                                 <div class="radio-img"></div>
                                 <input type="radio" name="morning" id="manha"
                                 value="manhã">
@@ -157,7 +157,7 @@
                                 <input type="radio" name="afternoom" id="afternoom"
                                 value="Tarde">
                                 <img src="./icons/sun-02.svg" alt="">
-                                <label for="afternoom">Tarder</label>
+                                <label for="afternoom">Tarde</label>
                             </div>
                         </div>
                         
