finalização da estrutura

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
                         <div class="radio-all">
                             <div class="radio-inside-1">
-                                <div class="radio-img"></div>
+                                <div class="radio-img-1"></div>
                                 <input type="radio" name="morning" id="manha"
                                 value="manhã">
                                 <img src="./icons/sun-cloud-02.svg" alt="">
