--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
                         <label for="turno">Selecione o turno de estudo</label>
 
                         <div class="radio-all">
-                            <div class="radio-inside-1">
-                                <div class="radio-img-1"></div>
-                                <input type="radio" name="morning" id="manha"
-                                value="manhã">
+                            <div class="radio-inner">
+                                <div class="radio-imagem"></div>
+                                <input type="checkbox" name="morning" id="morning"
+                                value="manhã" >
                                 <img src="./icons/sun-cloud-02.svg" alt="">
                                 <label for="morning">Manhã</label>
                             </div>
-                            <div class="radio-inside">
-                                <div class="radio-img"></div>
-                                <input type="radio" name="afternoom" id="afternoom"
+                            <div class="radio-inner">
+                                <div class="radio-imagem"></div>
+                                <input type="checkbox" name="afternoom" id="afternoom"
                                 value="Tarde">
                                 <img src="./icons/sun-02.svg" alt="">
                                 <label for="afternoom">Tarde</label>
