--- a/index.html
+++ b/index.html
@@ -160,8 +160,63 @@
                                 <label for="afternoom">Tarde</label>
                             </div>
                         </div>
-                        
+
+                        <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+
+                        <div class="radio-all">
+
+                            <div class="radio-inner">
+                                <div class="radio-imagem"></div>
+                                <input type="checkbox" name="sport" id="football">
+                                <img src="./icons/football.svg" alt="">
+                                <label for="football">Futebol</label>
+                            </div>
+
+                            <div class="radio-inner">
+                                <div class="radio-imagem"></div>
+                                <input type="checkbox" name="sport" id="basketball">
+                                <img src="./icons/basketball-02.svg" alt="">
+                                <label for="basketball">Basquete</label>
+                            </div>
+
+                            <div class="radio-inner">
+                                <div class="radio-imagem"></div>
+                                <input type="checkbox" name="sport" id="swimming">
+                                <img src="./icons/swimming.svg" alt="">
+                                <label for="swimming">Natação</label>
+                            </div>
+
+                            <div class="radio-inner">
+                                <div class="radio-imagem"></div>
+                                <input type="checkbox" name="sport" id="yoga">
+                                <img src="./icons/yoga-02.svg" alt="">
+                                <label for="yoga">Yoga</label>
+                            </div>
+
+                            <div class="radio-inner">
+                                <div class="radio-imagem"></div>
+                                <input type="checkbox" name="sport" id="volleyball">
+                                <img src="./icons/volleyball.svg" alt="">
+                                <label for="volleyball">Volei</label>
+                            </div>
+
+                            <div class="radio-inner">
+                                <div class="radio-imagem"></div>
+                                <input type="checkbox" name="sport" id="boxing">
+                                <img src="./icons/boxing-glove-01.svg" alt="">
+                                <label for="boxing">Boxe</label>
+                            </div>
+                           
+                        </div>
                 </fieldset>
+
+                <div class="terms-all radio-all checkbox-all">
+                    <div class="checkboc-imagem"></div>
+                    <input type="checkbox" name="terms" id="terms">
+                    <label for="terms">Declaro que li e concordo com os
+                        <strong>Termos e Condições</strong>  e com a <strong>Política de Privacidade</strong> 
+                         da escola Estrela do Amanhã. </label>
+                </div>
                 </form>    
             </div>
         </main>
