--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                         </div>
                 </fieldset>
 
-                <div class="terms-all radio-all checkbox-all">
-                    <div class="checkboc-imagem"></div>
+                <div class="terms-all checkbox-all">
+                    <div class="checkbox-imagem"></div>
                     <input type="checkbox" name="terms" id="terms">
                     <label for="terms">Declaro que li e concordo com os
                         <strong>Termos e Condições</strong>  e com a <strong>Política de Privacidade</strong> 
