--- a/index.html
+++ b/index.html
@@ -217,7 +217,12 @@
                         <strong>Termos e Condições</strong>  e com a <strong>Política de Privacidade</strong> 
                          da escola Estrela do Amanhã. </label>
                 </div>
-                </form>    
+
+                <div class="forms-action">
+                    <button class="secondary-btn" type="button">Salvar respostas</button>  
+                    <button class="primary-btn" type="submit">Fazer matrícula</button> 
+                </div>
+                </form> 
             </div>
         </main>
 
